[tool.poetry]
name = "plox"
version = "0.1.0"
description = ""
authors = ["Siddhartha <sidmontu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.1"
typer = "^0.4.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
mypy = "^0.910"
coverage = {extras = ["toml"], version = "^5.5"}
isort = "^5.9.3"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
pre-commit = "^2.14.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
scanner = "bin.scanner_bin:_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
'''

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[tool.isort]
profile = "black"
